Correct logo at mobile / is too big

--- a/app/assets/stylesheets/sectors.css.scss
+++ b/app/assets/stylesheets/sectors.css.scss
@@ -125,11 +125,12 @@ li.active a {
         display:inline-block;
         text-transform: uppercase;
         font-weight: 300;
-        font-size: 40px;
+        font-size: 20px;
         padding:6vh 0 ;
 
         @media (min-width: $screen-md-min){
           width:40%;
+          font-size: 40px;
         }
       }
 
